# citadel

./: .gitignore  .gitmodules  Makefile  README.md  setup-build-env
appimg-builder/: README  basic-image.conf  build-template.conf  common.inc  stage-one.sh  stage-two.sh
appimg-builder/appimg-files/: configure-host0.sh  launch
appimg-builder/appimg-modules/: configure-systemd  create-user  install-configure-host0  install-launch-script  install-packages  no-install-recommends  set-hostname  utility-library
citadel-tools/citadel-appimg/: Cargo.toml
citadel-tools/citadel-desktopd/: Cargo.toml
citadel-tools/citadel-realms/: Cargo.toml  README.md
citadel-tools/citadel-rootfs/: Cargo.toml
citadel-tools/citadel-rootfs/conf/: citadel-rootfs.conf
citadel-tools/citadel-rootfs/src/: blockdev.rs  config.rs  main.rs  metainfo.rs  packer.rs  util.rs
citadel-tools/citadel-update/: Cargo.toml
classes/: uefi-comboapp.bbclass
conf/: layer.conf
docs/: howto.md  realms.md
meta-citadel-distro/conf/: bblayers.conf.sample  layer.conf  local.conf.sample
meta-citadel-distro/wic/: citadel-image-minimal.wks
meta-citadel/classes/: citadel-image.bbclass  showvars.bbclass
meta-citadel/conf/: bblayers.conf.sample  layer.conf  local.conf.sample
meta-citadel/files/: citadel-fs-perms.txt
meta-foreign/: README  SOURCES
realmfs-builder/: README  build-template.conf  common.inc  stage-one.sh  stage-two.sh
scripts/: .gitignore  build-user-rootfs-stage-one  build-user-rootfs-stage-two  create_install_pack  install.sh  install_image  qemu-boot  repro_gaps.sh
(+494 files in other folders)
