[package]
name = "citadel-rootfs"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
homepage = "https://github.com/subgraph/citadel"

[dependencies]
clap = "2.30.0"
failure = "0.1.1"
libc = "0.2"
nix = "0.10.0"
ed25519-dalek = "^0.6"
rand = "0.4.2"
sha2 = "0.7.0"
toml = "0.4.5"
serde_derive = "1.0.27"
serde = "1.0.27"
rustc-serialize = "0.3.24"
lzma-rs = "0.1.0"
